# scribe

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_AND_IMPROVEMENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_GUIDE.md  GPU_QUICKSTART.md  GPU_REFERENCE.md  GPU_SETUP.md  INSTALL_SUMMARY.md  README.md  Start Scribe.bat  Start Scribe.vbs  StartScribe.vbs  THREADING_FIX_SUMMARY.md  UAT_MODEL_SELECTION.md  UI_MODERNIZATION_PHASE1_COMPLETE.md  WINDOWS_SHORTCUT_SETUP.md  benchmark_gpu.py  benchmark_real_audio.sh  check_gpu.py  cleanup_for_release.sh  install_python312_pytorch.bat  kilo_code_settings_export.json  pyproject.toml  pytest.ini  requirements.txt  run_scribe.py  run_tests.py  scribe_complete_fix.txt  scribe_detailed_log.txt  scribe_final_test.txt  scribe_isolated_test.txt  scribe_trace.txt  scribe_working_test.txt  setup_dev.bat  setup_dev.sh  (+12 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: tests.instructions.md
.github/workflows/: tests.yml
.scf/: BUILDSTATE.json  BUILDSTATE.md
config/: default.yaml  wsl_audio_setup.sh
data/: buildstate.json
docs/: AUTO_ANALYSIS.md  BUILD_TIMESTAMP.md  BUILD_TIMESTAMP_QUICK_REF.md  CODE_REVIEW_ACTIONS.md  EVOLUTIONARY_AI_ANALYSIS.md  HYBRID_PARALLEL_EXECUTION.md  MODEL_COMPARISON.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PERSONAL_VOICE_MODEL.md  PLUGIN_ARCHITECTURES.md  QUICK_START.md  ROADMAP.md  SCF_INTEGRATION.md  TRANSCRIPTION_QUALITY.md  UI_MODERNIZATION_PLAN.md  UI_UX_INSPIRATION.md  scf-guide.md
docs/screenshots/: README.md
src/scribe/: __init__.py  __main__.py  __version__.py  app.py
src/scribe/analytics/: __init__.py  value_calculator.py
src/scribe/config/: __init__.py  config_manager.py  models.py
src/scribe/core/: __init__.py  audio_recorder.py  database.py  gpu_utils.py  hotkey_manager.py  scf_cacher.py  single_instance.py  text_formatter.py  transcription_engine.py
src/scribe/plugins/: base.py  (+3 more)
tests/: 5_key_uats.py  README.md  VALIDATION_REPORT.md  benchmark_pipeline.py  benchmark_scf.py  conftest.py  qt_test_helper.py  test_audio_device_page.py  test_audio_recorder.py  test_core_features.py  test_encoding.py  test_history_page.py  test_hotkey_threading.py  test_pattern_matching.py  test_plugin_registry.py  test_recording_capture.py  test_recording_integration.py  test_settings_autosave.py  test_suite_comprehensive.py  test_ui_interactive.py  test_ui_rendering.py  test_ui_responsiveness.py  test_visual_functional.py
tools/: README.md  list_audio_devices.py  setup_wsl.py  test_version_checking.py  update_build_timestamp.py
(+41 files in other folders)
